Fix responsive footer height on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,9 @@ footer img { margin: 12px 0; }
     height: 450px;
     padding-top: 0px;
   }
+
+  #push, footer { height: 120px; }
+  footer p { margin: 10px 0; }
 }
 
 .navbar { font-size: 15px !important; }
